To do list, with JS

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="Stylesheet/style.css" />
   </head>
   <body>
-    <main id="div1" class="div1">
-      <h1>My to do list</h1>
+    <main id="Todo-container" class="Todo-container">
+      <h1>Att göra lista</h1>
       <input type="text" id="List" placeholder="To do list" />
       <button id="saveBtn" class="saveBtn">spara</button>
       <button id="restore" class="restore">Återställ</button>
