Project with JS

--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
       <div id="doneList"></div>
     </div>
 
-    <script src="main.js/main.js"></script>
+    <script src="main-js/main.js"></script>
   </body>
 </html>
